<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_orange_bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/payment_successful"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            style="@style/txt_OpenSansRomanBold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/payment_success"
            android:textColor="@color/gray_2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvSuccessMsg"
            style="@style/txtOpenSansRomanSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="8sp"
            android:text="@string/app_name"
            android:textColor="@color/pay_success_msg"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHome"
            style="@style/txt_OpenSansRomanBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30px"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="@dimen/_30px"
            android:includeFontPadding="false"
            android:paddingStart="70dp"
            android:paddingTop="12dp"
            android:paddingEnd="70dp"
            android:paddingBottom="12dp"
            android:text="@string/back_to_home"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/daytonight"
            app:cornerRadius="50dp" />

    </LinearLayout>

</RelativeLayout>